feat: added POST docs
