# product-api/swagger.yaml
@@ -2,6 +2,14 @@ basePath: /
 consumes:
     - application/json
 definitions:
+    GenericError:
+        description: GenericError is a generic error message returned by a server
+        properties:
+            message:
+                type: string
+                x-go-name: Message
+        type: object
+        x-go-package: go-microservices/handlers
     Product:
         description: The model data.Product represents a product
         properties:
@@ -41,6 +49,16 @@ definitions:
             - sku
         type: object
         x-go-package: go-microservices/data
+    ValidationError:
+        description: ValidationError is a collection of validation error messages
+        properties:
+            messages:
+                items:
+                    type: string
+                type: array
+                x-go-name: Messages
+        type: object
+        x-go-package: go-microservices/handlers
 info:
     description: the purpose of this application is to provide an application
     title: Product API.
@@ -53,6 +71,27 @@ paths:
             responses:
                 "200":
                     $ref: '#/responses/productsResponse'
+            tags:
+                - products
+        post:
+            description: Create a new product
+            operationId: postProduct
+            parameters:
+                - description: |-
+                    Product data structure to Update or Create.
+                    Note: the id field is ignored by update and create operations
+                  in: body
+                  name: Body
+                  required: true
+                  schema:
+                    $ref: '#/definitions/Product'
+            responses:
+                "200":
+                    $ref: '#/responses/productResponse'
+                "422":
+                    $ref: '#/responses/errorValidation'
+                "501":
+                    $ref: '#/responses/errorResponse'
             tags:
                 - products
     /products/{id}:
@@ -76,6 +115,14 @@ paths:
             description: Updates Product by ID
             operationId: putProduct
             parameters:
+                - description: |-
+                    Product data structure to Update or Create.
+                    Note: the id field is ignored by update and create operations
+                  in: body
+                  name: Body
+                  required: true
+                  schema:
+                    $ref: '#/definitions/Product'
                 - description: The ID of the product in the database
                   format: int64
                   in: path
@@ -91,6 +138,14 @@ paths:
 produces:
     - application/json
 responses:
+    errorResponse:
+        description: Generic error message returned as a string
+        schema:
+            $ref: '#/definitions/GenericError'
+    errorValidation:
+        description: Validation errors defined as an array of strings
+        schema:
+            $ref: '#/definitions/ValidationError'
     noContent:
         description: ""
     productResponse:
